# small-cpp-projects

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
extras/learning/: cpp_learning.txt
lib/: sdl2.txt  sdl_image_2.txt
lib/Google_tests/: CMakeLists.txt
projects/cyber_dojo/: TODO.md
projects/cyber_dojo/balanced_parentheses/balanced_parentheses_take_01/: CMakeLists.txt
projects/cyber_dojo/balanced_parentheses/balanced_parentheses_take_01/src/: balanced_parentheses.cpp  balanced_parentheses.hpp  main.cpp
projects/cyber_dojo/count_coins/: README.txt
projects/cyber_dojo/count_coins/count_coins_take_01/: CMakeLists.txt
projects/cyber_dojo/count_coins/count_coins_take_01/src/: count_coins.cpp  count_coins.hpp  main.cpp
projects/cyber_dojo/filename_range/filename_range_take_01/: CMakeLists.txt
projects/cyber_dojo/filename_range/filename_range_take_01/src/: filename_range.cpp  filename_range.hpp  main.cpp
projects/cyber_dojo/fizzbuzz/fizzbuzz_take_01/: CMakeLists.txt
projects/cyber_dojo/fizzbuzz/fizzbuzz_take_01/src/: fizzbuzz.cpp  fizzbuzz.hpp  main.cpp
projects/cyber_dojo/fizzbuzz/fizzbuzz_take_01/src/utils/: utils.hpp
projects/cyber_dojo/fizzbuzz_plus/fizzbuzz_plus_take_01/: CMakeLists.txt
projects/cyber_dojo/fizzbuzz_plus/fizzbuzz_plus_take_01/src/: fizzbuzz_plus.cpp  fizzbuzz_plus.hpp  main.cpp
projects/cyber_dojo/fizzbuzz_plus/fizzbuzz_plus_take_01/src/utils/: utils.cpp
projects/cyber_dojo/game_of_life/game_of_life_take_01/: CMakeLists.txt
projects/cyber_dojo/game_of_life/game_of_life_take_01/src/: game_of_life.cpp  game_of_life.hpp  main.cpp
projects/cyber_dojo/isbn/isbn_take_01/: CMakeLists.txt
projects/cyber_dojo/isbn/isbn_take_01/src/: isbn.cpp  isbn.hpp  main.cpp
projects/cyber_dojo/lcd_digits/lcd_digits_take_01/: CMakeLists.txt
projects/cyber_dojo/lcd_digits/lcd_digits_take_01/src/: lcd_digit_cell.cpp  lcd_digit_cell.hpp  lcd_digits.cpp  lcd_digits.hpp  main.cpp
projects/cyber_dojo/leap_year/leap_year_take_01/: CMakeLists.txt
projects/cyber_dojo/leap_year/leap_year_take_01/src/: leap_year.cpp  leap_year.hpp  main.cpp
projects/cyber_dojo/mine_field/mine_field_take_01/: CMakeLists.txt
projects/cyber_dojo/mine_field/mine_field_take_01/src/: main.cpp  mine_field.cpp  mine_field.hpp
projects/cyber_dojo/print_diamond/print_diamond_take_01/: CMakeLists.txt
projects/cyber_dojo/print_diamond/print_diamond_take_01/src/: main.cpp  print_diamond.cpp  print_diamond.hpp
projects/cyber_dojo/reverse_roman/reverse_roman_take_01/: CMakeLists.txt
projects/cyber_dojo/reverse_roman/reverse_roman_take_01/src/: main.cpp  reverse_roman.cpp  reverse_roman.hpp
projects/cyber_dojo/roman_numerals/roman_numerals_take_01/: CMakeLists.txt
projects/cyber_dojo/roman_numerals/roman_numerals_take_01/src/: main.cpp  roman_numerals.cpp  roman_numerals.hpp
projects/sdl2_prjs/: CMakeLists_Snake.txt
projects/sdl2_prjs/ex_01/: main.cpp
projects/sdl2_prjs/ex_02/: main.cpp
projects/tiny_prjs/hello_world_2/prj_cmake/: CMakeLists.txt
projects/tiny_prjs/hello_world_2/src/: hello_world_2.cpp
projects/tiny_prjs/power_01/prj_cmake/: CMakeLists.txt
projects/tiny_prjs/power_01/src/: power_01.cpp
projects/various/hello_world/prj_cmake/: CMakeLists.txt
projects/various/hello_world_2/prj_cmake/: CMakeLists.txt
projects/various/power_01/prj_cmake/: CMakeLists.txt
projects/various/roman_numerals_full/roman_numerals_full_take_01/: CMakeLists.txt
projects/various/roman_numerals_full/roman_numerals_full_take_01/src/: main.cpp  roman_numerals_full.cpp  roman_numerals_full.hpp
projects/very_small_prjs/hello_world/prj_cmake/: CMakeLists.txt
projects/very_small_prjs/hello_world/src/: hello_world.cpp
tests/unit/: CMakeLists.txt
tests/unit/cyber_dojo/balanced_parentheses/balanced_parentheses_take_01/src/: test_balanced_parentheses.cpp
tests/unit/cyber_dojo/count_coins/count_coins_take_01/src/: test_count_coins.cpp
tests/unit/cyber_dojo/filename_range/filename_range_take_01/src/: test_filename_range.cpp
tests/unit/cyber_dojo/fizzbuzz/fizzbuzz_take_01/src/: test_fizzbuzz.cpp
tests/unit/cyber_dojo/fizzbuzz_plus/fizzbuzz_plus_take_01/src/: test_fizzbuzz_plus.cpp
tests/unit/cyber_dojo/game_of_life/game_of_life_take_01/src/: test_game_of_life.cpp
tests/unit/cyber_dojo/isbn/isbn_take_01/src/: test_isbn.cpp
tests/unit/cyber_dojo/lcd_digits/lcd_digits_take_01/src/: test_lcd_digits.cpp
tests/unit/cyber_dojo/leap_year/leap_year_take_01/src/: test_leap_year.cpp
tests/unit/cyber_dojo/mine_field/mine_field_take_01/src/: test_mine_field.cpp
tests/unit/cyber_dojo/print_diamond/print_diamond_take_01/src/: test_print_diamond.cpp
tests/unit/cyber_dojo/reverse_roman/reverse_roman_take_01/src/: test_reverse_roman.cpp
tests/unit/cyber_dojo/roman_numerals/roman_numerals_take_01/src/: test_roman_numerals.cpp
tests/unit/various/roman_numerals_full/roman_numerals_full_take_01/src/: test_roman_numerals_full.cpp
